--- a/FashionShop-Admin/Views/WebsiteInfo/Index.cshtml
+++ b/FashionShop-Admin/Views/WebsiteInfo/Index.cshtml
@@ -1,169 +1,172 @@
 @model FashionShop.Models.views.WebsiteViewModel.WebsiteViewModel
-
+@using System.Web
 @{
-    ViewBag.Title = "Website Information";
+    ViewData["Title"] = "Website Information";
 }
+
 @section Styles
+
 {
     <link rel="stylesheet" href="~/plugin/datatables/responsive.dataTables.min.css">
     <link rel="stylesheet" href="~/plugin/datatables/dataTables.bootstrap5.min.css">
     <style>
-        .p-text p{
+        .p-text p {
             margin-bottom: 0;
         }
-        .custom-option option{
+
+        .custom-option option {
             padding-right: 8px;
         }
     </style>
 }
+
 @section Scripts
+
 {
-    <!-- Plugin Js-->
-    <script src="~/bundles/dataTables.bundle.js"></script>
-    <!-- Jquery Page Js -->
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/js/template.js"></script>
     <script>
-        // project data table
-        $(document).ready(function() {
-            $('#myProjectTable')
-                .addClass( 'nowrap' )
-                .dataTable( {
-                    responsive: true,
-                    paging: false,
-                    info: false,
-                    columnDefs: [
-                        { targets: [-1, -3], className: 'dt-body-right' }
-                    ]
-                });
-        });
+        $("#LogoFile").on("change", function (event) {
+            var file = event.target.files[0];
+            $("#reviewAvatar").attr("src", URL.createObjectURL(file));
+        })
     </script>
     <script>
-        $("#selectedStatus").on("change",function (){
-            var selectedValue = $(this).val();
-            var getId = $(this).data("web-id");
-            console.log(getId);
-            Swal.fire({
-                title: "Are you sure?",
-                text: "You won't be able to revert this!",
-                icon: "warning",
-                showCancelButton: true,
-                confirmButtonColor: "#3085d6",
-                cancelButtonColor: "#d33",
-                confirmButtonText: "Yes, Change it!"
-            }).then((result) => {
-                if (result.isConfirmed) {
-                    $.ajax({
-                        url: "@Url.Action("ChangeStatus","WebsiteInfo")",
-                        method:"POST",
-                        dataTypes:"json",
-                        data: {
-                            id : getId,
-                            status : selectedValue
-                        },success: function (res){
-                            if (res.statusCode === 202){
-                                Swal.fire({
-                                    title: "Update!",
-                                    text: res.value.message,
-                                    icon: "success"
-                                });
-                            };
-                            if (res.statusCode === 400){
-                                Swal.fire({
-                                    icon: "error",
-                                    title: "Oops...",
-                                    text: "Something went wrong!",
-                                });
-                            }
-                        },error: function (res){
-                            console.log(res);
-                        }
-                    });
-                   
-                }
-            });
-        });
+        $("#Address").val("@Model.WebsiteInfo["address"]");
+      var test = $("#Description").val("@Html.Raw(HttpUtility.HtmlDecode(Model.WebsiteInfo["description"]))");
+      console.log(test);
     </script>
-    
 }
-    <!-- Body: Body -->       
-            <div class="body d-flex py-lg-3 py-md-2">
-                <div class="container-xxl">
-                    <div class="row align-items-center">
-                        <div class="border-0 mb-4">
-                            <div class="card-header py-3 no-bg bg-transparent d-flex align-items-center px-0 justify-content-between border-bottom flex-wrap">
-                                <h3 class="fw-bold mb-0">Website Information</h3>
-                                <div class="col-auto d-flex w-sm-100">
-                                    <a class="btn btn-primary btn-set-task w-sm-100" asp-action="Create"><i class="icofont-plus-circle me-2 fs-6"></i>Add Information</a>
+
+<!-- Body: Body -->
+<div class="body d-flex py-3">
+    <div class="container-xxl">
+        <div class="row align-items-center">
+            <div class="border-0 mb-4">
+                <div
+                    class="card-header py-3 no-bg bg-transparent d-flex align-items-center px-0 justify-content-between border-bottom flex-wrap">
+                    <h3 class="fw-bold mb-0">Website Information</h3>
+                </div>
+            </div>
+        </div> <!-- Row end  -->
+        <div class="row g-3">
+            <div class="col-xl-4 col-lg-5 col-md-12">
+                <div class="card profile-card flex-column mb-3">
+                    <div class="card-header py-3 d-flex justify-content-between bg-transparent border-bottom-0">
+                        <h6 class="mb-0 fw-bold ">Webiste Information</h6>
+                    </div>
+                    <div class="card-body d-flex profile-fulldeatil flex-column">
+                        <div class="profile-block text-center w220 mx-auto">
+                            <a href="#">
+                                <img src="@Url.Content("uploaded/")@Model.WebsiteInfo["logo"]" alt="@Model.WebsiteInfo["name"]"
+                                     class="avatar xl rounded img-thumbnail shadow-sm">
+                            </a>
+                        </div>
+                        <div class="profile-info w-100">
+                            <h6 class="mb-0 mt-2  fw-bold d-block fs-6 text-center">@Model.WebsiteInfo["name"]</h6>
+                            <p class="mt-2">@Model.WebsiteInfo["description"]</p>
+                            <div class="row g-2 pt-2">
+                                <div class="col-xl-12">
+                                    <div class="d-flex align-items-center">
+                                        <i class="icofont-ui-touch-phone"></i>
+                                        <span class="ms-2">@Model.WebsiteInfo["phone"]</span>
+                                    </div>
+                                </div>
+                                <div class="col-xl-12">
+                                    <div class="d-flex align-items-center">
+                                        <i class="icofont-email"></i>
+                                        <span class="ms-2">@Model.WebsiteInfo["email"]</span>
+                                    </div>
+                                </div>
+                                <div class="col-xl-12">
+                                    <div class="d-flex align-items-center">
+                                        <i class="icofont-address-book"></i>
+                                        <span class="ms-2">@Model.WebsiteInfo["address"]</span>
+                                    </div>
+                                </div>
+                                <div class="col-xl-12">
+                                    <div class="d-flex align-items-center">
+                                        <i class="icofont-police"></i>
+                                        <span class="ms-2">@Model.WebsiteInfo["footer"]</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div> <!-- Row end  -->
-                    <div class="row clearfix g-3">
-                    <div class="col-sm-12">
-                        <div class="card mb-3">
-                            <div class="card-body">
-                                <table id="myProjectTable" class="table table-hover align-middle mb-2" style="width:100%">
-                                    <thead>
-                                    <tr>
-                                        <th>Id</th>
-                                        <th>Name</th>
-                                        <th>Logo</th>
-                                        <th>Email</th> 
-                                        <th>Phone</th>
-                                        <th>Address</th> 
-                                        <th>Created Date</th>
-                                        <th>Status</th>
-                                        <th>Actions</th>  
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    @foreach (var web in Model.WebsiteInfos)
-                                    {
-                                        <tr>
-                                            <td id="@web.WebsiteId"><strong>#@web.WebsiteId</strong></td>
-                                            <td>@web.SiteName </td>
-                                            <td>
-                                                @{
-                                                    var logo = string.IsNullOrEmpty(web.Logo) ? Url.Content("~/images/avatar-user.webp") : Url.Content("/uploaded/" + web.Logo);
-                                                }
-                                                <img class="avatar rounded" src="@logo" alt="@web.SiteName">
-                                            </td>
-                                            <td>
-                                                @web.Email
-                                            </td>
-                                            <td>@web.Phone</td>
-                                            <td class="text-truncate p-text" style="max-width: 150px">@web.Address</td>
-                                            <td>@web.CreatedAt</td>
-                                            <td>
-                                                @{
-                                                    var itemSelect = new List<SelectListItem>
-                                                    {
-                                                        new SelectListItem { Value = "active", Text = "Active", Selected = web.Status == "active"},
-                                                        new SelectListItem { Value = "inactive", Text = "In Active", Selected = web.Status == "inactive" },
-                                                        new SelectListItem { Value = "deleted", Text = "Deleted", Selected = web.Status == "deleted" }
-                                                    };
-                                                }
-                                                <select id="selectedStatus" class="form-select-sm pe-1" asp-items="itemSelect" data-web-id="@web.WebsiteId">
-                                                </select>
-                                            </td>
-                                            <td>
-                                                <div class="btn-group" role="group" aria-label="Basic outlined example">
-                                                    <a  class="btn btn-outline-secondary" asp-route-id="@web.WebsiteId" asp-action="Edit"><i class="icofont-edit text-success"></i></a>
-                                                    <form asp-action="Delete" method="post">
-                                                        <input type="hidden" name="id" value="@web.WebsiteId" />
-                                                        <button type="submit" class="btn btn-outline-secondary"><i class="icofont-ui-delete text-danger"></i></button>
-                                                    </form>
-                                                </div>
-                                            </td>
-                                        </tr>
-
-                                    }
-                                    </tbody>
-                                </table>
-                                <div page-model="@Model?.PagingInfo" page-action="Index" page-class="btn" page-classes-enabled="true" page-class-normal="btn-outline-dark" page-class-selected="btn-primary" class="btn-group m-1 float-end"></div>
-                            </div>
-                        </div>
                     </div>
-                    </div><!-- Row End -->
                 </div>
             </div>
+            <div class="col-xl-8 col-lg-7 col-md-12">
+                <div class="card mb-3">
+                    <div class="card-header py-3 d-flex justify-content-between bg-transparent border-bottom-0">
+                        <h6 class="mb-0 fw-bold ">Webiste Settings</h6>
+                    </div>
+                    <div class="card-body">
+                        <form class="row g-4" asp-action="Index"  method="post" enctype="multipart/form-data">
+                            <div class="col-sm-6">
+                                <div class="form-group">
+                                    <label class="form-label">Website Name</label>
+                                    <input class="form-control" type="text" asp-for="SiteName" value="@Model.WebsiteInfo["name"]">
+                                    <span asp-validation-for="SiteName" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="form-group">
+                                    <label class="form-label" for="Phone">Website Phone </label>
+                                    <input class="form-control" type="text" asp-for="Phone" id="Phone"
+                                           value="@Model.WebsiteInfo["phone"]">
+                                    <span asp-validation-for="Phone" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="form-group">
+                                    <label class="form-label" for="Address">Website Address</label>
+                                    <textarea class="form-control" asp-for="Address" id="Address" value="@Model.WebsiteInfo["address"]">@Model.WebsiteInfo["address"]</textarea>
+                                    <span asp-validation-for="Address" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 col-md-6 col-lg-6">
+                                <div class="form-group">
+                                    <label class="form-label" for="Email">Website Email</label>
+                                    <input class="form-control" type="email" asp-for="Email" id="Email" value="@Model.WebsiteInfo["email"]">
+                                    <span asp-validation-for="Email" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 col-md-6 col-lg-6">
+                                <div class="form-group">
+                                    <label class="form-label" for="Footer">Website Footer</label>
+                                    <input class="form-control" type="text" asp-for="Footer" id="Footer"
+                                           value="@Model.WebsiteInfo["footer"]">
+                                    <span asp-validation-for="Footer" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="form-group">
+                                    <label class="form-label" for="Description">Website Description</label>
+                                    <textarea class="form-control" aria-label="With textarea" asp-for="Description" id="Description">@Model.WebsiteInfo["description"]</textarea>
+                                    <span asp-validation-for="Description" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="col-5">
+                                <div class="form-group">
+                                    <label class="form-label" for="LogoFile">Change Logo</label>
+                                    <input type="file" asp-for="LogoFile" id="LogoFile" class="form-control" value="@Model.WebsiteInfo["logo"]">
+                                    <span asp-validation-for="LogoFile" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="col-7">
+                                <div class="d-flex justify-content-center align-items-center">
+                                    <img src="@Model.WebsiteInfo["logo"]" alt="@Model.WebsiteInfo["name"]"
+                                         id="reviewAvatar" width="160" height="160">
+                                </div>
+                            </div>
+                            <div class="col-12 mt-4">
+                                <button type="submit" class="btn btn-primary text-uppercase px-5">SAVE</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
